questions_need_to_ask/cpp/request_for_member_which_is_of_non-class_type/readme.txt
main.cpp: In function ‘int main()’:
main.cpp:17:4: error: request for member ‘init’ in ‘f’, which is of non-class type ‘Foo()’
  f.init(f1);
    ^~~~

g++ (Debian 6.3.0-18+deb9u1) 6.3.0 20170516
Copyright (C) 2016 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

